# visionaid-a11y-llm-audit

./: .gitignore  CLAUDE.md  PRICING.md  README.md  index.html  pipeline_walkthrough.ipynb  pyproject.toml  render.yaml  requirements.txt  run_audit.py  styles.css  usage.ipynb  vercel.json
data/: README.md
docs/: modular-prompts-plan.md
entry_points/: api_server.py  evaluate.py  generate_report.py  get_visionaid_home.py  run_pipeline.py  vercel_handler.py
eval_output/: comparison.json  eval_claude-haiku-4-5-20251001.json  eval_claude-opus-4-6.json  eval_claude-sonnet-4-6.json
eval_output/claude-haiku-4-5-20251001/: manifest.json
eval_output/claude-opus-4-6/: manifest.json
eval_output/claude-sonnet-4-20250514/: programmatic_findings.json
eval_output/claude-sonnet-4-6/: manifest.json
processing_scripts/: accessibility_audit_walkthrough.ipynb
processing_scripts/docs/: pipeline.md
processing_scripts/ingestion/: pull_html.py
prompts/: __init__.py  audit_binary.txt  audit_wcag_focused.txt  audit_with_reason.txt  guideline_variations.py  registry.py  report_formatting.py  slicers.py  task_instructions.py  templates.py
reports/: audit_20260228_182910_claude-haiku-4-5-20251001.json
results/: 20260212_161613_deepseek_deepseek-chat_audit_binary.json  20260212_161613_deepseek_deepseek-chat_audit_binary.txt
scoring/: score.py
scripts/: download_accessguru.py  download_benchmark.py  generate_prompt.py  generate_report.py  run_pipeline.py
src/: __init__.py  config.py  dataset.py  llm.py  runner.py
test_files/: dat_visionaid_home.html  home.html
(+68 files in other folders)
